@@ -1,3 +1,7 @@
+2016-03-21  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* device-src/vfs-device.c: Return some error instead of just logging a
+	  warning
+
 2016-03-18  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* xfer-src/element-glue.c (do_directtcp_accept): Increase timeout to
 	  840
